--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "express-query-boolean": "^2.0.0",
     "express-query-int": "^3.0.0",
+    "morgan": "^1.10.0",
     "pdfjs": "^2.4.7",
+    "rotating-file-stream": "^2.1.6",
     "tmp": "^0.2.1"
   },
   "devDependencies": {
